Changes to homepage
Changed bg 3 for slider image. yellow bg on top nav. added logo img.
tried to change font to mathlete - failed. added character images.
added magicbook bg at bottom. links to social live.

--- a/app/static/css/_fpanels.css
+++ b/app/static/css/_fpanels.css
@@ -43,7 +43,7 @@
 }
 
 #fpanels .head4 {
-	background: url("../img/backgrounds/silver.jpg") no-repeat;	
+	background: url("../img/backgrounds/magicbook_background_texture.jpg") no-repeat;	
 	display: block;
 	padding-top: 60px;
 	padding-bottom: 60px;
