Started features page slicing and content
Added video of Pip. Added bg texture for overview. Added map for
curriculum. Added list of subnavigation. copied across logo and navabar
yellow colour.

--- a/app/static/css/_fpanels.css
+++ b/app/static/css/_fpanels.css
@@ -2,7 +2,8 @@
 	margin-top: -35px;
 }
 #fpanels .head{
-	background: url("../img/backgrounds/mint.jpg") no-repeat;
+	background-color: #f29d0a;
+	background: url("../img/features_overview_map_texture.png") no-repeat, url("../img/backgrounds/mango.jpg") no-repeat;
 	display: block;
 	padding-top: 60px;
 	padding-bottom: 60px;
