--- a/app/static/css/theme.css
+++ b/app/static/css/theme.css
@@ -25,12 +25,12 @@ textarea {
 --------------------------- */
 @font-face {
     font-family: 'MathleteSkinny';
-    src: url('font/Mathlete-Skinny-webfont.eot');
-    src: url('font/Mathlete-Skinny-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/Mathlete-Skinny-webfont.woff') format('woff'),
-         url('font/Mathlete-Skinny-webfont.ttf') format('truetype'),
-         url('font/Mathlete-Skinny-webfont.svg#MathleteSkinny') format('svg'),
-         url('font/Mathlete-Skinny.otf') format('otf');
+    src: url('../font/Mathlete-Skinny-webfont.eot');
+    src: url('../font/Mathlete-Skinny-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/Mathlete-Skinny-webfont.woff') format('woff'),
+         url('../font/Mathlete-Skinny-webfont.ttf') format('truetype'),
+         url('../font/Mathlete-Skinny-webfont.svg#MathleteSkinny') format('svg'),
+         url('../font/Mathlete-Skinny.otf') format('otf');
     font-weight: normal;
     font-style: normal;
 }
