--- a/app/static/css/theme.css
+++ b/app/static/css/theme.css
@@ -39,6 +39,10 @@ h1,h2,h3,h4{
 	font-family: 'MathleteSkinny';
 }
 
+.padding-small{
+	padding: 15px;
+}
+
 .logo {
     position: absolute;
     z-index: 20;
@@ -58,6 +62,47 @@ h1,h2,h3,h4{
 
 .second-nav-bar{
 	width: 960px;
+}
+
+/* Download page 
+--------------------------------------------------*/
+
+.download-box{
+
+}
+
+.blue-border{
+	border: 5px solid #e0edfa;
+}
+
+.green-border{
+	border: 5px solid #b9d94c;
+}
+
+.download-texture{
+	height: 124px;
+	text-align: center;
+	padding-top: 22px;
+
+}
+
+.download-texture h2 a{
+	color: white;
+	font-size: 50px;
+
+}
+
+
+.download-blue-dots{
+	background: url("../img/download_blue_dot.png") repeat-x;
+}
+
+.download-orange-dots{
+	background: url("../img/download_orange_dot.png") repeat-x;
+}
+
+.download-purple{
+	background: url("../img/download_purple.png") repeat-x;
 }
 
 /* Navbar
