working on content for the for parents page

--- a/app/static/css/_fpanels.css
+++ b/app/static/css/_fpanels.css
@@ -47,10 +47,10 @@
 	padding-bottom: 60px;
 	height: 340px;
 	width: 100%;
-	-webkit-background-size: cover;
+	/*-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover;*/
 
 }
 
@@ -75,10 +75,10 @@
 	padding-bottom: 60px;
 	height: 288px;
 	width: 100%;
-	-webkit-background-size: cover;
+	/*-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover;*/
 }
 
 #fpanels .head5 {
@@ -88,10 +88,10 @@
 	padding-bottom: 60px;
 	height: 288px;
 	width: 100%;
-	-webkit-background-size: cover;
+	/*-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover;*/
 }
 
 
