--- a/app/static/css/theme.css
+++ b/app/static/css/theme.css
@@ -44,6 +44,10 @@ h1,h2,h3,h4{
 	font-family: 'MathleteSkinny';
 }
 
+p{
+	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;
+}
+
 h3{
 	font-size: 45px;
 }
@@ -77,6 +81,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffab05', end
 
 .padding-small{
 	padding: 15px;
+}
+
+.top-shadow{
+	background: url("../img/download_shadow_container.png") top center no-repeat;
 }
 
 .red-border{
