added image to homepage and changed copy errors across whole site

--- a/app/static/css/theme.css
+++ b/app/static/css/theme.css
@@ -182,6 +182,10 @@ a#logo-symbol-link:hover{
 	width: 960px;
 }
 
+.download-text-box{
+	height: 340px;
+}
+
 /*  Homepage
 --------------------------------------------------*/
 
@@ -1043,6 +1047,10 @@ header {
 		padding: 20px;
 	}
 
+.homepage-frame-banner{
+		padding-top: 0px;
+	}
+
 	/* Media queries - 980px
 ------------------*/
 
@@ -1065,6 +1073,10 @@ header {
 
 	a#logo-symbol-link:hover{
 	background-position: 0 -40px;
+	}
+
+	.homepage-frame-banner{
+		padding-top: 0px;
 	}
 
 }
