--- a/app/static/css/_fpanels.css
+++ b/app/static/css/_fpanels.css
@@ -7,7 +7,7 @@
 	background-color: #fef1c3;
 	padding-top: 60px;
 	padding-bottom: 60px;
-	height: 288px;
+	/*height: 288px;*/
 	width: 100%;
 	/* -webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -32,7 +32,7 @@
 	display: block;
 	padding-top: 60px;
 	padding-bottom: 60px;
-	height: 288px;
+	/*height: 288px;*/
 	width: 100%;
 	/* -webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -45,7 +45,7 @@
 	display: block;
 	padding-top: 60px;
 	padding-bottom: 60px;
-	height: 340px;
+	/*height: 340px;*/
 	width: 100%;
 	/*-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -59,7 +59,7 @@
 	display: block;
 	padding-top: 60px;
 	padding-bottom: 60px;
-	height: 288px;
+	/*height: 288px;*/
 	width: 100%;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -73,7 +73,7 @@
 	display: block;
 	padding-top: 60px;
 	padding-bottom: 60px;
-	height: 288px;
+	/*height: 288px;*/
 	width: 100%;
 	/*-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -86,7 +86,7 @@
 	display: block;
 	padding-top: 60px;
 	padding-bottom: 60px;
-	height: 288px;
+	/*height: 288px;*/
 	width: 100%;
 	/*-webkit-background-size: cover;
 	-moz-background-size: cover;
