--- a/app/static/css/challenge.css
+++ b/app/static/css/challenge.css
@@ -59,3 +59,40 @@
 #fade-first, #fade-second, #fade-third{
 	display:none;
 }
+
+
+/* GAME FRAME */
+
+#game-frame{
+	width: 800px;
+	margin: 10px auto;
+	height: 600px;
+	background-color: white;
+	position: relative;
+}
+
+.reading-challenge .not-ready-yet{
+	height: auto;
+}
+
+#picture-frame-left{
+	position: absolute;
+	top: -300px;
+	left: 40px;
+	display: none;
+}
+
+#picture-frame-right{
+	position: absolute;
+	top: -300px;
+	right: 40px;
+	display: none;
+}
+
+#fruitmachine-body{
+	position: absolute;
+	bottom: -300px;
+	left: 240px;
+	display: none;
+}
+
