Graph.html included

--- a/app/static/css/challenge.css
+++ b/app/static/css/challenge.css
@@ -221,3 +221,23 @@
 	font-size: 80pt;
 	margin: 20px;
 }
+
+
+
+/*GRAPH CSS*/
+
+
+
+#outer {
+  width: 100%;
+  text-align: center;
+}
+
+#inner {
+  display: inline-block;
+}
+
+
+#pip-score{
+	
+}
